# cpp-driver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README-dev.md  README-dev.rst  README.md
.github/workflows/: docs-pages.yaml  docs-pages@v2.yaml  docs-pr.yaml  docs-pr@v1.yaml  pages.yml
docs/: Makefile  pyproject.toml
docs/_utils/: multiversion.sh  redirections.yaml
docs/source/: conf.py  contents.rst  index.md
docs/source/api/: cassandra.h.rst  dse.h.rst  index.rst
include/: cassandra.h
packaging/: README.md  scylla-cpp-driver.spec
packaging/debian/: control  rules
src/: CMakeLists.txt  address.hpp  cluster.cpp  cluster.hpp  cluster_config.cpp  config.hpp  connection.hpp  connection_pool.cpp  connection_pool.hpp  connection_pool_connector.cpp  connection_pool_connector.hpp  connection_pool_manager.cpp  connection_pool_manager.hpp  connection_pool_manager_initializer.cpp  connection_pool_manager_initializer.hpp  connector.cpp  connector.hpp  decoder.cpp  delayed_connector.cpp  delayed_connector.hpp  exported_connection.cpp  exported_connection.hpp  host.cpp  host.hpp  optional.hpp  pooled_connection.hpp  protocol.cpp  protocol.hpp  rack_aware_policy.cpp  rack_aware_policy.hpp  request_handler.cpp  request_processor.cpp  request_processor_initializer.cpp  request_processor_initializer.hpp  session.cpp  shard_port_calculator.cpp  shard_port_calculator.hpp  sharding_info.cpp  sharding_info.hpp  socket.hpp  (+2 more)
src/optional/: optional_akrzemi.hpp  optional_std.hpp
topics/: README.md
topics/basics/: README.md
topics/configuration/: README.md
(+8 files in other folders)
