[tool.poetry]
name = "cpp-driver"
description = "Scylla C/C++ Driver"
version = "0.1"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
breathe="4.33.1"
python = "^3.7"
pyyaml = "6.0"
pygments = "2.2.0"
recommonmark = "0.7.1"
sphinx-scylladb-theme = "~1.2.1"
sphinx-sitemap = "2.1.0"
sphinx-autobuild = "2021.3.14"
Sphinx = "4.3.2"
sphinx-multiversion-scylla = "~0.2.11"
[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api" 
